[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-randstr"
version = "0.1.8"
description = "Generate random readable strings for various purposes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["random", "string", "token", "password", "generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-randstr#readme"
Repository = "https://github.com/philiprehberger/py-randstr"
Issues = "https://github.com/philiprehberger/py-randstr/issues"
Changelog = "https://github.com/philiprehberger/py-randstr/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_randstr"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
